# FdF

./: CMakeLists.txt  Makefile  a.out  brezenham.c  drawer.c  fdf  fdf.h  keys.c  main.c  map_init.c  reader.c  spin.c  test
libft/: Makefile  ft_atoi.c  ft_atoi_hex.c  ft_bzero.c  ft_delcomm.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_join.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_minimalize.c  ft_nbrlen.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_read.c  ft_rewrite.c  ft_strcat.c  ft_strchr.c  (+29 more)
libft/includes/: get_next_line.h  libft.h
mlx/test/: mlx-test
test_maps/: 42.fdf  smpl.fdf
